# simple-plugins

./: Cargo.toml  build.ps1  build.sh  bundler.toml  readme.md  rust-toolchain  xtask.sh
.cargo/: config.toml
basic-clipper/: Cargo.toml
basic-clipper/src/: _lib  dsp.rs  lib.rs
bundler/: Cargo.toml
bundler/src/: main.rs
components/: Cargo.toml  build.rs
components/src/: adaptors.rs  cascade.rs  dc_blocker.rs  gain.rs  half_band.rs  lib.rs  oversample.rs  sample.rs  simd.rs  simper.rs  stilson_moog.rs  sweeten.rs  tube.rs
components/src/deprecated/: dc_blocker.rs  moog.rs  oversample.rs  tube.rs
components/src/deprecated/oversample/: os1.rs  os2.rs
components/src/oversample/: os1.rs  os2.rs  r8.rs
filters/: Cargo.toml
filters/src/: lib.rs  simper.rs  stilson_moog.rs
plugins/channel/: Cargo.toml
plugins/channel/src/: eq.rs  lib.rs
plugins/clipper/: Cargo.toml
plugins/clipper/src/: lib.rs  simd.rs
plugins/depth/: Cargo.toml
plugins/depth/src/: lib.rs
plugins/filter/: Cargo.toml
plugins/filter/src/: lib.rs
plugins/gain/: Cargo.toml
plugins/gain/src/: lib.rs  simd.rs
plugins/mono/: Cargo.toml
plugins/mono/src/: lib.rs  simd.rs
plugins/oversample/: Cargo.toml  readme.md
plugins/oversample/src/: lib.rs
plugins/sundara-eq/: Cargo.toml
plugins/sundara-eq/src/: lib.rs
plugins/sundara-monitors/: Cargo.toml
plugins/sundara-monitors/src/: eq.rs  lib.rs
plugins/tube/: Cargo.toml
plugins/tube/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
