[workspace]
resolver = "2"
members = ["bundler", "components", "plugins/*"]

[workspace.package]
version  = "0.1.5"
rust-version = "1.80"
edition = "2021"
homepage = "https://github.com/insomnimus/simple-plugins"
repository = "https://github.com/insomnimus/simple-plugins"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
strip = true
lto = true

[workspace.dependencies]
# biquad = "0.5.0 "
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "16c6c58f4d9f08c9c515c991c218bff235cff6e2" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug", rev = "16c6c58f4d9f08c9c515c991c218bff235cff6e2" }
simdeez = "1.0.8"
#valib = { git = "https://github.com/SolarLiner/valib", rev = "7c9041e" }
