[workspace]
resolver = "2"
members = ["bundler", "components", "plugins/*", "util"]

[workspace.package]
version  = "0.2.0"
rust-version = "1.80"
edition = "2021"
homepage = "https://github.com/insomnimus/simple-plugins"
repository = "https://github.com/insomnimus/simple-plugins"
license = "GPL-3.0-or-later"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
strip = true
lto = true

[workspace.dependencies]
components.path = "components"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", rev = "16c6c58f4d9f08c9c515c991c218bff235cff6e2", default-features = false }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug", rev = "16c6c58f4d9f08c9c515c991c218bff235cff6e2" }
rubato = "0.16.1"
simdeez = "1.0.8"
syn = "2.0.0"
wide = "0.7.31"
