[package]
name = "components"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
nih_plug.workspace = true
simdeez.workspace = true
wide.workspace = true
util.path = "../util"
rubato.workspace = true