[package]
name = "simple-clipper"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug.workspace = true
simdeez.workspace = true
components.path = "../../components"
# valib = { workspace = true, features = ["oversample", "nih-plug"] }
